--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "@types/lodash": "^4.14.202",
+    "dayjs": "^1.11.10",
     "discord.js": "^14.14.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "lodash": "^4.17.21",
+    "osu-api-extended": "^2.7.67",
     "oxlint": "^0.2.0",
+    "prisma": "^5.8.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
