--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "type": "commonjs",
   "scripts": {
     "build": "nest build",
     "format": "oxlint --fix",
@@ -24,19 +25,25 @@
     "@discord-nestjs/common": "^5.2.10",
     "@discord-nestjs/core": "^5.3.12",
     "@discord-nestjs/schematics": "^0.4.12",
+    "@minhducsun2002/node-osr-parser": "^0.1.0",
+    "@neondatabase/serverless": "^0.6.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
+    "@prisma/adapter-neon": "^5.8.1",
+    "@prisma/client": "^5.8.1",
     "@types/lodash": "^4.14.202",
     "dayjs": "^1.11.10",
     "discord.js": "^14.14.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "lodash": "^4.17.21",
+    "nestjs-prisma": "^0.22.0",
+    "node-fetch": "^2.7.0",
     "osu-api-extended": "^2.7.67",
     "oxlint": "^0.2.0",
-    "prisma": "^5.8.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -45,7 +52,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
+    "@types/node-fetch": "^2.6.11",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
@@ -53,6 +62,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.2",
+    "prisma": "^5.8.1",
     "reflect-metadata": "^0.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
