--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@prisma/adapter-neon": "^5.8.1",
     "@prisma/client": "^5.8.1",
     "@types/lodash": "^4.14.202",
+    "bluebird": "^3.7.2",
     "dayjs": "^1.11.10",
     "discord.js": "^14.14.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -49,6 +50,7 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
+    "@types/bluebird": "^3.5.42",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
